# polymarket-arbitrage

./: .env  .gitignore  .kalshi-private.pem.example  README.md  bot.js  clob-client.js  index.html  notifier.js  package-lock.json  package.json  polymarket.js  queue-bridge.js  risk-manager.js  scanner.js  sectors.js  setup-pc.bat  start-all.bat  stop-all.bat  tailwind.config.js  vercel.json  vite.config.js
.claude/: launch.json
accounts/: manager.js
backtest/: engine.js
config/: multi-account.js
dashboard/: comparison.jsx
data/: edge-model.json  news-cache.json  news-theses.json  oracle-log.json  portfolio-paper.json  rust-trades.json.bak.1772674446  tracked-wallets.json  whale-signals.json
discord/: .env.example  README-AI.md  README.md  ai-bot.js  bot.js  chat.js  commands.js  deploy-commands.js  example-integration.js  index.js  tools.js  trading-ai.js
execution/: clob-signer.js  order-manager.js
gpu-worker/: config.py  requirements.txt  server.py  setup.bat  setup.sh
integrations/: matcher.js  subgraph-client.js  whale-tracker.js
learning/: data-store.js  edge-model.js  feature-engine.js  rust-trade-trainer.js
lib/: edge-scorer.js  event-calendar.js  gpu-client.js  gpu-singleton.js  orderbook-imbalance.js  orderflow-watcher.js  risk-manager.js  technical-analysis.js  (+1 more)
oracle/: index.js  (+3 more)
rust-engine/: Cargo.toml
rust-engine/src/: api.rs  config.rs  correlation.rs  detector.rs  executor.rs  main.rs  models.rs  precompute.rs  risk.rs  signer.rs  trend.rs
rust-engine/src/feeds/: binance.rs  cryptoquant.rs  mod.rs  polymarket.rs  tradingview.rs
(+118 files in other folders)
